k8s/blue-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: amsousa95/flask_steam:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "200m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 5000
