k8s/purple-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: purple
spec:
  selector:
    matchLabels:
      app: purple
  template:
    metadata:
      labels:
        app: purple
    spec:
      containers:
      - name: purple
        image: amsousa95/flask_steam:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "200m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: purple-service
spec:
  selector:
    app: purple
  ports:
  - port: 80
    targetPort: 5000
